testing/end-to-end/integration/basic_cluster/snapshots/end_to_end__basic_cluster__simple__non_transactional_batch_fail.snap
---
source: testing/end-to-end/integration/basic_cluster/simple.rs
expression: "resp.json::<serde_json::Value>().await.unwrap()"
---
[
  {
    "results": {
      "columns": [],
      "rows": []
    }
  },
  {
    "error": {
      "message": "no such table: not_exist"
    }
  }
]
