testing/end-to-end/integration/basic_cluster/snapshots/end_to_end__basic_cluster__simple__transactional_batch_rollback.snap
---
source: testing/end-to-end/integration/basic_cluster/simple.rs
expression: "resp.json::<serde_json::Value>().await.unwrap()"
---
{
  "error": "no such table: not_exist"
}
